--- a/webnews/accounts/templates/login.html
+++ b/webnews/accounts/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Webnews - Login</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
     <link rel="icon" type="img/ico" href="{% static 'img/favicon.ico' %}">
 </head>
 <body>
