--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,3 +8,7 @@
     -moz-box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.175);
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.175);
 }
+
+.portfolio-item {
+	margin: 10px;
+}
